--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
   </head>
   <body>
     <canvas></canvas>
-    <div id="controls"></div>
+    <div id="controls">
+      <div class="range-container">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="white"
+          class="bi bi-lightning-charge-fill"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"
+          />
+        </svg>
+        <input type="range" id="speed" min="1" max="50" step="1" />
+      </div>
+      <button id="start">start</button>
+      <button id="clear">clear</button>
+      <div class="range-container">
+        <input type="range" id="size" min="25" max="100" step="5" value="25" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="white"
+          class="bi bi-aspect-ratio-fill"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M0 12.5v-9A1.5 1.5 0 0 1 1.5 2h13A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5M2.5 4a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 1 0V5h2.5a.5.5 0 0 0 0-1zm11 8a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-1 0V11h-2.5a.5.5 0 0 0 0 1z"
+          />
+        </svg>
+      </div>
+    </div>
     <footer>
       <hr />
       <div id="footer-container">
