mechanics: simulation rules, stop, change speed

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"
           />
         </svg>
-        <input type="range" id="speed" min="1" max="50" step="1" />
+        <input type="range" id="speed" min="50" max="2000" step="50" />
       </div>
-      <button id="start">start</button>
+      <button id="start" class="green-button">start</button>
       <button id="clear">clear</button>
       <div class="range-container">
-        <input type="range" id="size" min="25" max="100" step="5" value="25" />
+        <input type="range" id="size" min="15" max="100" step="5" value="50" />
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
