speed (bug-) fix: small values => high speed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
             d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"
           />
         </svg>
-        <input type="range" id="speed" min="50" max="2000" step="50" />
+        <input
+          type="range"
+          id="speed"
+          min="-2000"
+          max="-5"
+          step="-5"
+          value="600"
+        />
       </div>
       <button id="start" class="green-button">start</button>
       <button id="clear">clear</button>
