info text at the bottom

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
         </svg>
       </div>
     </div>
+    <div id="info">
+      <h1>John Conways Game of Life</h1>
+      <p>
+        Conway's Game of Life is a captivating cellular automaton created by
+        mathematician John Horton Conway. Despite its simple rules, the game
+        generates complex and often unpredictable patterns. Try it out yourself!
+      </p>
+    </div>
     <footer>
       <hr />
       <div id="footer-container">
